--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,12 @@
     "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "moment-timezone": "^0.6.0",
-    "ngx-quill": "^17.0.0",
     "postcss": "^8.5.6",
-    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.13",
